--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -24,9 +24,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set Node.js 16.x
-        uses: actions/setup-node@v3.5.1
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version-file: '.tool-versions'
 
       - name: Install dependencies
         run: npm ci
