--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,21 +19,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./
-        with:
-          api-key: ${{ secrets.MACKEREL_APIKEY }}
-          title: annotation title
-          description: annotation description
-          service: ${{ secrets.MACKEREL_SERVICE }}
       - id: vars
         run: |
           echo "from_time=$(date +%s --date '5 minutes ago')" >> "$GITHUB_OUTPUT"
           echo "to_time=$(date +%s --date '4 minutes ago')" >> "$GITHUB_OUTPUT"
       - uses: ./
+        name: test with default value
+        with:
+          api-key: ${{ secrets.MACKEREL_APIKEY }}
+          title: annotation title
+          description: annotation description (run_id=${{ github.run_id }}, run_number=${{ github.run_number }})
+          service: ${{ secrets.MACKEREL_SERVICE }}
+      - uses: ./
+        name: test
         with:
           api-key: ${{ secrets.MACKEREL_APIKEY }}
           title: annotation title2
-          description: annotation description2
+          description: annotation description2 (run_id=${{ github.run_id }}, run_number=${{ github.run_number }})
           from: ${{ steps.vars.outputs.from_time }}
           to: ${{ steps.vars.outputs.to_time }}
           service: ${{ secrets.MACKEREL_SERVICE }}
